--- a/views/home.html
+++ b/views/home.html
@@ -5,52 +5,103 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mercado Liebre</title>
+
+    <!--==================================================
+        Tipo de letra Roboto
+    ===================================================-->
+
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/styles.css">
+
+    <!--==================================================
+        Iconos Fontawesome
+    ===================================================-->
+    
+    <script src="https://kit.fontawesome.com/439c181295.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
-    <header>
-        <img src="/images/logo-mercado-liebre.svg" alt="Logo Mercadolibre"/>
-        <p>Lugar para poner la barra de búsqueda</p>
-        <p>Comprá en cuotas y sin tarjeta de crédito</p>
-        <nav>
-            <ul>
+    <header class="main-header">
+
+        <!--==================================================
+            Logo, busqueda y compra
+        ===================================================-->
+        
+        <div class="main-header-top-bar">
+            <img src="/images/logo-mercado-liebre.svg" class="logo" alt="Logo Mercadolibre"/>
+            <div class="search-bar">
+                <input type="text" name="search">
+                <button type="button" class="btn btn-search"><i class="fas fa-search"></i></button>
+            </div>
+            <h2 class="copy-header">
+                <i class="fas fa-hand-holding-usd"></i>
+                Comprá en cuotas y sin tarjeta de crédito
+            </h2>
+        </div>
+        
+        <!--==================================================
+            Hamburguesa
+        ===================================================-->
+        
+        <a href="#" class="hamburguer-button">
+            <i class="fas fa-bars"></i>
+        </a>
+        
+        <!--==================================================
+            Navegacion del menu
+        ===================================================-->
+            
+        <nav class="main-navbar">
+            <ul class="left-navbar">
                 <li><a href="#">Ofertas</a></li>
                 <li><a href="#">Tiendas Oficiales</a></li>
                 <li><a href="#">Vender</a></li>
                 <li><a href="#">Ayuda</a></li>
             </ul>
-            <ul>
-                <li><a href="#">Creá tu cuenta</a></li>
-                <li><a href="#">Ingresá</a></li>
-                <li><a href="#">Mis compras</a></li>
+            
+            <ul class="right-navbar">
+                <li><a href="#">Creá tu cuenta <i class="fas fa-id-card"></i></a></li>
+                <li><a href="#">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
+                <li><a href="#">Mis compras <i class="fas fa-shopping-basket"></i></a></li>
             </ul>
         </nav>
     </header>
-    <section>
+        
+    <!--==================================================
+        BANNER
+    ===================================================-->
+    
+    <section class="banner">
         <img src="/images/img-home-banner.jpg" alt="imagen banner"/>
     </section>
+
+    <!--==================================================
+        Lista de productos
+    ===================================================-->
+    
     <main>
         <section>
             <h2>Basado en tu última visita</h2>
             <article>
                 <img src="/images/img-cafetera-moulinex.jpg" alt="imagen catetera mulinex"/>
-                <p>$6.770</p>
-                <p>40% off</p>
+                <p class="main-price">$6.770</p>
+                <p class="main-discount">40% off</p>
                 <h3><strong>Cafetera Moulinex</strong></h3>
             </article>
             <article>
                 <img src="/images/img-macbook-pro-2019.jpg" alt="imagen macbook-pro"/>
-                <p>$230.000</p>
-                <p>20% off</p>
+                <p class="main-price">$230.000</p>
+                <p class="main-discount">20% off</p>
                 <h3><strong>MacBook Pro 2019</strong></h3>
             </article>   
                 <img src="/images/img-samsung-galaxy-s10.jpg" alt="imagen Samsung Galaxy"/>
-                <p>$70.500</p>
-                <p>10% off</p>
+                <p class="main-price">$70.500</p>
+                <p class="main-discount">10% off</p>
                 <h3><strong>Samsung Galaxy S10</strong></h3>
             <article>    
                 <img src="/images/img-tv-samsung-smart.jpg" alt="imagen Samsung Galaxy"/>
-                <p>$23.200</p>
-                <p>5% off</p>
+                <p class="main-price">$23.200</p>
+                <p class="main-discount">5% off</p>
                 <h3><strong>SmartTv Samsung 43"</strong></h3>
             </article>
         </section>
@@ -82,24 +133,32 @@
             </article>
         </section>
     </main>
+
+    <!--==================================================
+        FOOTER del sitio
+    ===================================================-->
+    
     <footer>
         <section>
+            <span class="icon-footer"><i class="fas fa-credit-card"></i></span>
             <h3>Pagá con tarjeta o en efectivo</h3>
-            <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
+            <p class="body-pie">Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
                 puntos de pago. ¡Y siempre es seguro!</p>
         </section>
         <section>
+            <span class="icon-footer"><i class="fas fa-gift"></i></span>
             <h3>Envío gratis desde $ 2.500</h3>
-            <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
+            <p class="body-pie">Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
                 productos. Es un beneficio de Mercado Puntos.</p>
         </section>
         <section>
+            <span class="icon-footer"><i class="fas fa-user-shield"></i></span>
             <h3>Seguridad, de principio a fin</h3>
-            <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
+            <p class="body-pie">¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
                 porque estás siempre protegid@.</p>
         </section>
-        <section>
-            <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
+        <section class="pie-footer">
+            <p class="body-pie">Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
         </section>   
     </footer>
 </body>
