--- a/views/home.html
+++ b/views/home.html
@@ -83,23 +83,31 @@
         <section>
             <h2>Basado en tu última visita</h2>
             <article>
-                <img src="/images/img-cafetera-moulinex.jpg" alt="imagen catetera mulinex"/>
+                <div class="imagen-producto">
+                    <img src="/images/img-cafetera-moulinex.jpg" alt="imagen catetera mulinex"/>
+                </div>
                 <p class="main-price">$6.770</p>
                 <p class="main-discount">40% off</p>
                 <h3><strong>Cafetera Moulinex</strong></h3>
             </article>
             <article>
-                <img src="/images/img-macbook-pro-2019.jpg" alt="imagen macbook-pro"/>
+                <div class="imagen-producto">
+                    <img src="/images/img-macbook-pro-2019.jpg" alt="imagen macbook-pro"/>
+                </div>
                 <p class="main-price">$230.000</p>
                 <p class="main-discount">20% off</p>
                 <h3><strong>MacBook Pro 2019</strong></h3>
-            </article>   
-                <img src="/images/img-samsung-galaxy-s10.jpg" alt="imagen Samsung Galaxy"/>
+            </article>
+                <div class="imagen-producto">
+                    <img src="/images/img-samsung-galaxy-s10.jpg" alt="imagen Samsung Galaxy"/>
+                </div>   
                 <p class="main-price">$70.500</p>
                 <p class="main-discount">10% off</p>
                 <h3><strong>Samsung Galaxy S10</strong></h3>
-            <article>    
-                <img src="/images/img-tv-samsung-smart.jpg" alt="imagen Samsung Galaxy"/>
+            <article>
+                <div class="imagen-producto">
+                    <img src="/images/img-tv-samsung-smart.jpg" alt="imagen Samsung Galaxy"/>
+                </div>    
                 <p class="main-price">$23.200</p>
                 <p class="main-discount">5% off</p>
                 <h3><strong>SmartTv Samsung 43"</strong></h3>
@@ -108,27 +116,33 @@
         <section>
             <h2>Ofertas</h2>
             <article>
-                <img src="/images/img-cafetera-moulinex.jpg" alt="imagen catetera mulinex"/>
-                <p>$6.770</p>
-                <p>40% off</p>
+                <div class="imagen-producto">
+                    <img src="/images/img-cafetera-moulinex.jpg" alt="imagen catetera mulinex"/>
+                </div>
+                <p class="main-price">$6.770</p>
+                <p class="main-discount">40% off</p>
                 <h3><strong>Cafetera Moulinex</strong></h3>
             </article>
             <article>
-                <img src="/images/img-macbook-pro-2019.jpg" alt="imagen macbook-pro"/>
-                <p>$230.000</p>
-                <p>20% off</p>
+                <div class="imagen-producto">
+                    <img src="/images/img-macbook-pro-2019.jpg" alt="imagen macbook-pro"/>
+                </div>
+                <p class="main-price">$230.000</p>
+                <p class="main-discount">20% off</p>
                 <h3><strong>MacBook Pro 2019</strong></h3>
             </article>
-            <article>
-                <img src="/images/img-samsung-galaxy-s10.jpg" alt="imagen Samsung Galaxy"/>
-                <p>$70.500</p>
-                <p>10% off</p>
+                <div class="imagen-producto">
+                    <img src="/images/img-samsung-galaxy-s10.jpg" alt="imagen Samsung Galaxy"/>
+                </div>   
+                <p class="main-price">$70.500</p>
+                <p class="main-discount">10% off</p>
                 <h3><strong>Samsung Galaxy S10</strong></h3>
-            </article>
             <article>
-                <img src="/images/img-tv-samsung-smart.jpg" alt="imagen Samsung Galaxy"/>
-                <p>$23.200</p>
-                <p>5% off</p>
+                <div class="imagen-producto">
+                    <img src="/images/img-tv-samsung-smart.jpg" alt="imagen Samsung Galaxy"/>
+                </div>    
+                <p class="main-price">$23.200</p>
+                <p class="main-discount">5% off</p>
                 <h3><strong>SmartTv Samsung 43"</strong></h3>
             </article>
         </section>
