--- a/views/home.html
+++ b/views/home.html
@@ -28,10 +28,18 @@
         ===================================================-->
         
         <div class="main-header-top-bar">
-            <img src="/images/logo-mercado-liebre.svg" class="logo" alt="Logo Mercadolibre"/>
-            <div class="search-bar">
-                <input type="text" name="search">
-                <button type="button" class="btn btn-search"><i class="fas fa-search"></i></button>
+            <div class="main-header-logo-bar">
+                <div class="main-logo">
+                    <img src="/images/logo-mercado-liebre.svg" class="logo" alt="Logo Mercadolibre"/>
+                </div>
+                <div class="main-search">
+                    <div class="search-bar">
+                        <div class ="search-bar-input">
+                            <input type="text" name="search">
+                            <button type="button" class="btn btn-search"><i class="fas fa-search"></i></button>
+                        </div>
+                    </div>
+                </div>
             </div>
             <h2 class="copy-header">
                 <i class="fas fa-hand-holding-usd"></i>
@@ -80,72 +88,158 @@
     ===================================================-->
     
     <main>
+        <h2>Basado en tu última visita</h2>
+        
         <section>
-            <h2>Basado en tu última visita</h2>
-            <article>
-                <div class="imagen-producto">
-                    <img src="/images/img-cafetera-moulinex.jpg" alt="imagen catetera mulinex"/>
-                </div>
-                <p class="main-price">$6.770</p>
-                <p class="main-discount">40% off</p>
-                <h3><strong>Cafetera Moulinex</strong></h3>
-            </article>
-            <article>
-                <div class="imagen-producto">
-                    <img src="/images/img-macbook-pro-2019.jpg" alt="imagen macbook-pro"/>
-                </div>
-                <p class="main-price">$230.000</p>
-                <p class="main-discount">20% off</p>
-                <h3><strong>MacBook Pro 2019</strong></h3>
-            </article>
-                <div class="imagen-producto">
-                    <img src="/images/img-samsung-galaxy-s10.jpg" alt="imagen Samsung Galaxy"/>
-                </div>   
-                <p class="main-price">$70.500</p>
-                <p class="main-discount">10% off</p>
-                <h3><strong>Samsung Galaxy S10</strong></h3>
-            <article>
-                <div class="imagen-producto">
-                    <img src="/images/img-tv-samsung-smart.jpg" alt="imagen Samsung Galaxy"/>
-                </div>    
-                <p class="main-price">$23.200</p>
-                <p class="main-discount">5% off</p>
-                <h3><strong>SmartTv Samsung 43"</strong></h3>
-            </article>
+            
+            <!-- Grupo de 2 productos -->
+            <div class="article-tablet">
+                <article class="main-product">
+                    <div class="imagen-producto">
+                        <img src="/images/img-cafetera-moulinex.jpg" alt="imagen catetera mulinex"/>
+                    </div>
+                    <div class="box-price-dicount">
+                        <div class="img_truck">
+                            <i class="fas fa-truck"></i>
+                        </div>
+                        <div class="precio_oferta">
+                            <p class="main-price">$6.770</p>
+                            <p class="main-discount">40% off</p>
+                        </div>
+                        <h3><strong>Cafetera Moulinex</strong></h3>
+                    </div>
+                </article>
+                <article class="main-product">
+                    <div class="imagen-producto">
+                        <img src="/images/img-macbook-pro-2019.jpg" alt="imagen macbook-pro"/>
+                    </div>
+                    <div class="box-price-dicount">
+                        <div class="img_truck">
+                            <i class="fas fa-truck"></i>
+                        </div>
+                        <div class="precio_oferta">
+                            <p class="main-price">$230.000</p>
+                            <p class="main-discount">20% off</p>
+                        </div>
+                        <h3><strong>MacBook Pro 2019</strong></h3>
+                    </div>
+                </article>
+            </div>
+            <!-- Fin Grupo de 2 productos -->
+
+            <!-- Grupo de 2 productos -->
+            <div class="article-tablet">
+                <article class="main-product">
+                    <div class="imagen-producto">
+                        <img src="/images/img-samsung-galaxy-s10.jpg" alt="imagen Samsung Galaxy"/>
+                    </div>
+                    <div class="box-price-dicount">
+                        <div class="img_truck">
+                            <i class="fas fa-truck"></i>
+                        </div>
+                        <div class="precio_oferta">
+                            <p class="main-price">$70.500</p>
+                            <p class="main-discount">10% off</p>
+                        </div>
+                        <h3><strong>Samsung Galaxy S10</strong></h3>
+                    </div>
+                </article>
+                <article class="main-product">
+                    <div class="imagen-producto">
+                        <img src="/images/img-tv-samsung-smart.jpg" alt="imagen Samsung Galaxy"/>
+                    </div>
+                    <div class="box-price-dicount">
+                        <div class="img_truck">
+                            <i class="fas fa-truck"></i>
+                        </div>
+                        <div class="precio_oferta">
+                            <p class="main-price">$23.200</p>
+                            <p class="main-discount">5% off</p>
+                        </div>
+                        <h3><strong>SmartTv Samsung 43"</strong></h3>    
+                    </div>
+                </article>
+            </div>
+            <!-- Fin Grupo de 2 productos -->
+
         </section>
+
+        <h2>Ofertas</h2>
+    
         <section>
-            <h2>Ofertas</h2>
-            <article>
-                <div class="imagen-producto">
-                    <img src="/images/img-cafetera-moulinex.jpg" alt="imagen catetera mulinex"/>
-                </div>
-                <p class="main-price">$6.770</p>
-                <p class="main-discount">40% off</p>
-                <h3><strong>Cafetera Moulinex</strong></h3>
-            </article>
-            <article>
-                <div class="imagen-producto">
-                    <img src="/images/img-macbook-pro-2019.jpg" alt="imagen macbook-pro"/>
-                </div>
-                <p class="main-price">$230.000</p>
-                <p class="main-discount">20% off</p>
-                <h3><strong>MacBook Pro 2019</strong></h3>
-            </article>
-                <div class="imagen-producto">
-                    <img src="/images/img-samsung-galaxy-s10.jpg" alt="imagen Samsung Galaxy"/>
-                </div>   
-                <p class="main-price">$70.500</p>
-                <p class="main-discount">10% off</p>
-                <h3><strong>Samsung Galaxy S10</strong></h3>
-            <article>
-                <div class="imagen-producto">
-                    <img src="/images/img-tv-samsung-smart.jpg" alt="imagen Samsung Galaxy"/>
-                </div>    
-                <p class="main-price">$23.200</p>
-                <p class="main-discount">5% off</p>
-                <h3><strong>SmartTv Samsung 43"</strong></h3>
-            </article>
+            
+            <!-- Grupo de 2 productos -->
+            <div class="article-tablet">
+                <article class="main-product">
+                    <div class="imagen-producto">
+                        <img src="/images/img-cafetera-moulinex.jpg" alt="imagen catetera mulinex"/>
+                    </div>
+                    <div class="box-price-dicount">
+                        <div class="img_truck">
+                            <i class="fas fa-truck"></i>
+                        </div>
+                        <div class="precio_oferta">
+                            <p class="main-price">$6.770</p>
+                            <p class="main-discount">40% off</p>
+                        </div>
+                        <h3><strong>Cafetera Moulinex</strong></h3>
+                    </div>
+                </article>
+                <article class="main-product">
+                    <div class="imagen-producto">
+                        <img src="/images/img-macbook-pro-2019.jpg" alt="imagen macbook-pro"/>
+                    </div>
+                    <div class="box-price-dicount">
+                        <div class="img_truck">
+                            <i class="fas fa-truck"></i>
+                        </div>
+                        <div class="precio_oferta">
+                            <p class="main-price">$230.000</p>
+                            <p class="main-discount">20% off</p>
+                        </div>
+                        <h3><strong>MacBook Pro 2019</strong></h3>
+                    </div>
+                </article>
+            </div>
+            <!-- Fin Grupo de 2 productos -->
+
+            <!-- Grupo de 2 productos -->
+            <div class="article-tablet">
+                <article class="main-product">
+                    <div class="imagen-producto">
+                        <img src="/images/img-samsung-galaxy-s10.jpg" alt="imagen Samsung Galaxy"/>
+                    </div>
+                    <div class="box-price-dicount">
+                        <div class="img_truck">
+                            <i class="fas fa-truck"></i>
+                        </div>
+                        <div class="precio_oferta">
+                            <p class="main-price">$70.500</p>
+                            <p class="main-discount">10% off</p>
+                        </div>
+                        <h3><strong>Samsung Galaxy S10</strong></h3>
+                    </div>
+                </article>
+                <article class="main-product">
+                    <div class="imagen-producto">
+                        <img src="/images/img-tv-samsung-smart.jpg" alt="imagen Samsung Galaxy"/>
+                    </div>
+                    <div class="box-price-dicount">
+                        <div class="img_truck">
+                            <i class="fas fa-truck"></i>
+                        </div>
+                        <div class="precio_oferta">
+                            <p class="main-price">$23.200</p>
+                            <p class="main-discount">5% off</p>
+                        </div>
+                        <h3><strong>SmartTv Samsung 43"</strong></h3>    
+                    </div>
+                </article>
+            </div>
+            <!-- Fin Grupo de 2 productos -->
+
         </section>
+        
     </main>
 
     <!--==================================================
