Ajustes de media query para desktop y tv

--- a/views/home.html
+++ b/views/home.html
@@ -35,16 +35,18 @@
                 <div class="main-search">
                     <div class="search-bar">
                         <div class ="search-bar-input">
-                            <input type="text" name="search">
+                            <input type="text" name="search" placeholder="Buscar productos, marcas....">
                             <button type="button" class="btn btn-search"><i class="fas fa-search"></i></button>
                         </div>
                     </div>
                 </div>
             </div>
-            <h2 class="copy-header">
-                <i class="fas fa-hand-holding-usd"></i>
-                Comprá en cuotas y sin tarjeta de crédito
-            </h2>
+            <div class="main-tarjeta">
+                <h2 class="copy-header">
+                    <i class="fas fa-hand-holding-usd"></i>
+                    Comprá en cuotas y sin tarjeta de crédito
+                </h2>
+            </div>
         </div>
         
         <!--==================================================
