--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,13 +8,13 @@ body {
     background: #F1FAFF;
 }
 
-    /*==================================================
-        Cabecera y logo
-    ==================================================*/
-
 img {
     width: 100%;
 }
+
+/*==================================================
+    Cabecera y logo
+==================================================*/
 
 .main-header {
     background-color: #EAC926;
@@ -26,25 +26,16 @@ img {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    /* line-height: 60px; */
-    border: 2px solid black;
 }
 
 .main-logo {
     width: 50%;
-    border: 1px solid red;
 }
 .main-search {
     display: flex;
     flex-direction: column;
     justify-content: center;
     width: 50%;
-    border: 1px solid green;
-}
-
-.search-bar-input {
-    /* justify-content: center; */
-    border: 1px solid brown;
 }
 
 .search-bar-input input{
@@ -189,8 +180,6 @@ main .main-discount {
 
 
 main h3 {
-    /* padding: 0px 0px 15px 15px; */
-    /* display: none; */
     color: #666;
     margin: 20px 0 0 0;
 }
@@ -256,20 +245,39 @@ footer .pie-footer {
     margin-top: 10px;
 }
 
+/*==================================================
+    PUNTO DE QUIEBRE
+==================================================*/
+
+/* ++++++ 768 ++++++ */
 @media (min-width: 768px) {
+
     .main-header-top-bar {
         display: flex;
         justify-content: space-between;
+        margin-bottom: 15px;
+    }
+
+    .main-header-logo-bar {
+        width: 50%;
+    }
+
+    .main-tarjeta {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 50%;
+    }
+    
+    .copy-header {
+        margin: 0;
+        text-align: right;
+        font-size: 16px;
     }
 
     .search-bar {
         margin: auto;
         margin-left: 15px;
-    }
-
-    .copy-header {
-        max-width: 350px;
-        text-align: right;
     }
 
     .hamburguer-button {
@@ -319,21 +327,13 @@ footer .pie-footer {
         margin: 20px 0 0 0;
     }
 
-
     .main-product {
         box-shadow: 0px 0px 10px rgb(100, 100, 100);
     }
 }
 
+/* +++++ 1200 +++++ */
 @media (min-width: 1200px) {
-    .logo {
-        width: 250px;
-    }
-
-    .main-header-top-bar, .main-navbar {
-        max-width: 1200px;
-        margin: 0 auto;
-    }
 
     .main-header-top-bar {
         align-items: center;
@@ -341,9 +341,17 @@ footer .pie-footer {
 
     .search-bar {
         margin: auto;
+        width: 80%;
+        margin-right: 0;
     }
+
     .search-bar input {
-        width: 350px;
+        width: 100%;
+        height: 40px;
+    }
+
+    .search-bar button {
+        height: 40px;
     }
 
     .copy-header {
