--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -20,12 +20,16 @@ img {
     background-color: #EAC926;
     /* rellenos a los costados */
     padding: 20px;
+    /* border: 1px solid #000; */
 }
+
+
 
 .main-header-logo-bar {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    /* border: 1px solid red; */
 }
 
 .main-logo {
@@ -36,15 +40,18 @@ img {
     flex-direction: column;
     justify-content: center;
     width: 50%;
+    /* border: 1px solid white; */
 }
 
-.search-bar-input input{
-    width: 70%;
-}
 
 .search-bar-input {
     display: flex;
     justify-content: center;
+    /* border: 1px solid red; */
+}
+
+.search-bar-input input{
+    width: 70%;
 }
 
 .search-bar input, button {
@@ -61,6 +68,10 @@ img {
     border: none;
     background: #ffffff;
     cursor: pointer;
+}
+
+.main-tarjeta {
+    /* border: 1px solid black; */
 }
 
 
@@ -122,7 +133,6 @@ img {
 .banner {
     display: flex;
     max-width: 100%;
-    margin: 10px 0;
 }
 .banner img {
     max-width: 100%;
@@ -258,15 +268,26 @@ footer .pie-footer {
         margin-bottom: 15px;
     }
 
+    .main-logo {
+        /* border: 1px solid blue; */
+    }
+
     .main-header-logo-bar {
-        width: 50%;
+        width: 52%;
+        /* border: 1px solid green; */
+    }
+
+    .main-search {
+        width: 48%;
+        /* border: 1px solid black; */
     }
 
     .main-tarjeta {
         display: flex;
         flex-direction: column;
         justify-content: center;
-        width: 50%;
+        width: 48%;
+        /* border: 1px solid violet; */
     }
     
     .copy-header {
@@ -277,7 +298,17 @@ footer .pie-footer {
 
     .search-bar {
         margin: auto;
-        margin-left: 15px;
+        margin-right: 0;
+        /* border: 1px solid brown; */
+    }
+
+    .search-bar input {
+        width: 100%;
+        height: 30px;
+    }
+
+    .search-bar button {
+        height: 30px;
     }
 
     .hamburguer-button {
@@ -314,22 +345,12 @@ footer .pie-footer {
     .main-product {
         max-width: 100%;
         margin: 10px;
-        justify-content: space-between;
-    }
-
-    .imagen-producto {
-        margin: auto;
-    }
-
-    main h3 {
-        display: block;
-        color: #666;
-        margin: 20px 0 0 0;
-    }
-
-    .main-product {
         box-shadow: 0px 0px 10px rgb(100, 100, 100);
+        
     }
+
+    /* .main-product {
+    } */
 }
 
 /* +++++ 1200 +++++ */
@@ -372,13 +393,16 @@ footer .pie-footer {
     .main-navbar a {
         font-size: 19px;
     }
+
     .banner img {
         width: 100%;
     }
+
     .imagen-producto {
         display: flex;
         justify-content:center;
     }
+    
     .imagen-producto img {
         justify-content: center;
     }
