--- a/views/home.html
+++ b/views/home.html
@@ -34,6 +34,7 @@
                 </div>
                 <div class="main-search">
                     <div class="search-bar">
+                        
                         <div class ="search-bar-input">
                             <input type="text" name="search" placeholder="Buscar productos, marcas....">
                             <button type="button" class="btn btn-search"><i class="fas fa-search"></i></button>
@@ -70,8 +71,8 @@
             </ul>
             
             <ul class="right-navbar">
-                <li><a href="#">Creá tu cuenta <i class="fas fa-id-card"></i></a></li>
-                <li><a href="#">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
+                <li><a href="/register">Creá tu cuenta <i class="fas fa-id-card"></i></a></li>
+                <li><a href="/login">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
                 <li><a href="#">Mis compras <i class="fas fa-shopping-basket"></i></a></li>
             </ul>
         </nav>
@@ -148,7 +149,7 @@
                 </article>
                 <article class="main-product">
                     <div class="imagen-producto">
-                        <img src="/images/img-tv-samsung-smart.jpg" alt="imagen Samsung Galaxy"/>
+                        <img src="/images/img-tv-samsung-smart.jpg" alt="imagen Samsung Smart"/>
                     </div>
                     <div class="box-price-dicount">
                         <div class="img_truck">
