--- a/views/register.html
+++ b/views/register.html
@@ -72,7 +72,7 @@
             
             <ul class="right-navbar">
                 <li><a href="/register">Creá tu cuenta <i class="fas fa-id-card"></i></a></li>
-                <li><a href="#">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
+                <li><a href="/login">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
                 <li><a href="#">Mis compras <i class="fas fa-shopping-basket"></i></a></li>
             </ul>
         </nav>
@@ -90,7 +90,7 @@
         <div class="register-card-body">
             <p class="register-box-msg">Registrarse</p>
 
-            <form action="/register" method="POST">
+            <form action="/registro" method="POST">
     
                 <div class="row">
                     <div class="row-user">
