--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,5 @@
 * {
     box-sizing: border-box;
-    /* margin: 0; */
 }
 
 body {
@@ -20,7 +19,6 @@ img {
     background-color: #EAC926;
     /* rellenos a los costados */
     padding: 20px;
-    /* border: 1px solid #000; */
 }
 
 
@@ -29,7 +27,6 @@ img {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    /* border: 1px solid red; */
 }
 
 .main-logo {
@@ -40,14 +37,12 @@ img {
     flex-direction: column;
     justify-content: center;
     width: 50%;
-    /* border: 1px solid white; */
 }
 
 
 .search-bar-input {
     display: flex;
     justify-content: center;
-    /* border: 1px solid red; */
 }
 
 .search-bar-input input{
@@ -69,11 +64,6 @@ img {
     background: #ffffff;
     cursor: pointer;
 }
-
-.main-tarjeta {
-    /* border: 1px solid black; */
-}
-
 
 .copy-header {
     font-weight: 400;
@@ -188,7 +178,6 @@ main .main-discount {
     color: #39b54a;
 }
 
-
 main h3 {
     color: #666;
     margin: 20px 0 0 0;
@@ -219,11 +208,29 @@ main img {
     width: 70%;
 }
 
+.truck {
+    transform: rotate(0deg);
+    transform: rotateY(180deg);
+    transition: all 0.4s ease-in;
+}
+
+.main-product:hover .truck {
+    transform: translate(-340px);
+}
+
+.main-product {
+    max-width: 100%;
+    margin: 10px;
+    transition: all 0.4s ease-in;
+}
+
+.main-product:hover {
+    box-shadow: 0px 0px 10px rgb(100, 100, 100);
+}
+
 main article {
     margin-bottom: 10px;
 }
-
-
 
 /*==================================================
     Footer
@@ -233,6 +240,7 @@ footer {
     display: flex;
     flex-direction: column;
     text-align: center;
+    margin-top: 20px;
 }
 footer h3, p {
     margin: 0;
@@ -249,7 +257,15 @@ footer .body-pie {
 footer .icon-footer {
     font-size: 2em;
     color: #1259c3;
+    transition: all 0.4s ease-in;
 }
+
+footer .icon-footer:hover {
+    color: #EAC926;
+    transform: rotateY(180deg);
+    transition: all 0.4s ease-in;
+}
+
 footer .pie-footer {
     text-align-last: left;
     margin-top: 10px;
@@ -259,8 +275,8 @@ footer .pie-footer {
     PUNTO DE QUIEBRE
 ==================================================*/
 
-/* ++++++ 768 ++++++ */
-@media (min-width: 768px) {
+/* ++++++ 481 ++++++ */
+@media (min-width: 481px) {
 
     .main-header-top-bar {
         display: flex;
@@ -268,18 +284,12 @@ footer .pie-footer {
         margin-bottom: 15px;
     }
 
-    .main-logo {
-        /* border: 1px solid blue; */
-    }
-
     .main-header-logo-bar {
         width: 52%;
-        /* border: 1px solid green; */
     }
 
     .main-search {
         width: 48%;
-        /* border: 1px solid black; */
     }
 
     .main-tarjeta {
@@ -287,7 +297,6 @@ footer .pie-footer {
         flex-direction: column;
         justify-content: center;
         width: 48%;
-        /* border: 1px solid violet; */
     }
     
     .copy-header {
@@ -341,20 +350,54 @@ footer .pie-footer {
         max-width: 100%;
     }
     
-
-    .main-product {
-        max-width: 100%;
-        margin: 10px;
-        box-shadow: 0px 0px 10px rgb(100, 100, 100);
-        
+    .main-price {
+        width: 40%;
+    }
+    
+    .main-discount {
+        width: 60%;
     }
 
-    /* .main-product {
-    } */
+    .box-price-dicount h3 {
+        position: relative;
+        bottom: 40px;
+        z-index: -1;
+        opacity: 0;
+        transition: all 0.4s ease-in;
+    }
+
+    .box-price-dicount {
+        height: 50px;
+        transition: all 0.4s ease-in;
+    }
+
+    .main-product:hover .box-price-dicount h3{
+        position: relative;
+        bottom: 15px;
+        z-index: 1;
+        opacity: 1;
+    }
+
+    .main-product:hover .box-price-dicount {
+        height: 80px;
+    }
+
+    .main-product:hover .truck {
+        transform: translate(-295px);
+    }
+
+    footer div {
+        display: flex;
+    }
+    footer div section {
+        display: flex;
+        flex-direction: column;
+    }
+
 }
 
-/* +++++ 1200 +++++ */
-@media (min-width: 1200px) {
+/* +++++ 768 +++++ */
+@media (min-width: 769px) {
 
     .main-header-top-bar {
         align-items: center;
@@ -407,6 +450,52 @@ footer .pie-footer {
         justify-content: center;
     }
 
+    .box-price-dicount h3 {
+        position: relative;
+        bottom: 40px;
+        z-index: -1;
+        opacity: 0;
+        transition: all 0.4s ease-in;
+    }
+
+    .box-price-dicount {
+        height: 50px;
+        transition: all 0.4s ease-in;
+    }
+
+    .main-product:hover .box-price-dicount h3{
+        position: relative;
+        bottom: 15px;
+        z-index: 1;
+        opacity: 1;
+    }
+
+    .main-product:hover .box-price-dicount {
+        height: 80px;
+    }
+
+    .main-product {
+        height: 330px;
+        transition: all 0.4s ease-in;
+    }
+
+    .main-product:hover {
+        height: 370px;
+    }
+
+    .main-price {
+        width: 50%;
+    }
+    
+    .main-discount {
+        width: 50%;
+    }
+
+    .main-product:hover .truck {
+        transform: translate(-170px);
+    }
+
+
     section {
         display: flex;
         flex-direction: row;
@@ -415,5 +504,35 @@ footer .pie-footer {
 
     .article-tablet {
         display: flex;
+    }
+}
+
+@media (min-width: 1023px) {
+    .main-product {
+        height: 280px;
+        transition: all 0.4s ease-in;
+    }
+
+    .main-product:hover {
+        height: 310px;
+    }
+
+    .main-product:hover .truck {
+        transform: translate(-175px);
+    }
+}
+
+@media (min-width: 1200px) {
+    .main-product {
+        height: 360px;
+        transition: all 0.4s ease-in;
+    }
+
+    .main-product:hover {
+        height: 390px;
+    }
+
+    .main-product:hover .truck {
+        transform: translate(-255px);
     }
 }
