ajustes en rutas de login y register

--- a/views/home.html
+++ b/views/home.html
@@ -30,10 +30,10 @@
         <div class="main-header-top-bar">
             <div class="main-header-logo-bar">
                 <div class="main-logo">
-                    <img src="/images/logo-mercado-liebre.svg" class="logo" alt="Logo Mercadolibre"/>
+                    <a href="/"><img src="/images/logo-mercado-liebre.svg" class="logo" alt="Logo Mercadolibre"/></a>
                 </div>
                 <div class="main-search">
-                    <form action="/search" method="GET">
+                    <form action="/search" method="POST">
                         <div class="search-bar">
                             <div class ="search-bar-input">
                                 <input type="text" name="search" placeholder="Buscar productos, marcas....">
