--- a/views/login.html
+++ b/views/login.html
@@ -31,7 +31,8 @@
         <div class="main-header-top-bar">
             <div class="main-header-logo-bar">
                 <div class="main-logo">
-                    <img src="/images/logo-mercado-liebre.svg" class="logo" alt="Logo Mercadolibre"/>
+                    <a href="/"><img src="/images/logo-mercado-liebre.svg" class="logo" alt="Logo Mercadolibre"/></a>
+                    
                 </div>
                 <div class="main-search">
                     <div class="search-bar">
@@ -90,7 +91,7 @@
         <div class="register-card-body">
             <p class="register-box-msg">Loguearse</p>
 
-            <form action="/login" method="GET">
+            <form action="/login" method="POST">
     
                 <div class="row">
                     <div class="row-user">
@@ -124,24 +125,26 @@
     ===================================================-->
     
     <footer>
-        <section>
-            <span class="icon-footer"><i class="fas fa-credit-card"></i></span>
-            <h3>Pagá con tarjeta o en efectivo</h3>
-            <p class="body-pie">Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
-                puntos de pago. ¡Y siempre es seguro!</p>
-        </section>
-        <section>
-            <span class="icon-footer"><i class="fas fa-gift"></i></span>
-            <h3>Envío gratis desde $ 2.500</h3>
-            <p class="body-pie">Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
-                productos. Es un beneficio de Mercado Puntos.</p>
-        </section>
-        <section>
-            <span class="icon-footer"><i class="fas fa-user-shield"></i></span>
-            <h3>Seguridad, de principio a fin</h3>
-            <p class="body-pie">¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
-                porque estás siempre protegid@.</p>
-        </section>
+        <div>
+            <section>
+                <span class="icon-footer"><i class="fas fa-credit-card"></i></span>
+                <h3>Pagá con tarjeta o en efectivo</h3>
+                <p class="body-pie">Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
+                    puntos de pago. ¡Y siempre es seguro!</p>
+            </section>
+            <section>
+                <span class="icon-footer"><i class="fas fa-gift"></i></span>
+                <h3>Envío gratis desde $ 2.500</h3>
+                <p class="body-pie">Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
+                    productos. Es un beneficio de Mercado Puntos.</p>
+            </section>
+            <section>
+                <span class="icon-footer"><i class="fas fa-user-shield"></i></span>
+                <h3>Seguridad, de principio a fin</h3>
+                <p class="body-pie">¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
+                    porque estás siempre protegid@.</p>
+            </section>
+        </div>
         <section class="pie-footer">
             <p class="body-pie">Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
         </section>   
