--- a/views/login.html
+++ b/views/login.html
@@ -12,6 +12,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/colores.css">
     <link rel="stylesheet" href="/css/login.css">
 
     <!--==================================================
