--- a/views/home.html
+++ b/views/home.html
@@ -100,14 +100,14 @@
             <!-- Grupo de 2 productos -->
             <div class="article-tablet">
                 <article class="main-product">
-                    <div class="imagen-producto">
+                    <div class="product-image">
                         <img src="/images/img-cafetera-moulinex.jpg" alt="imagen catetera mulinex"/>
                     </div>
                     <div class="box-price-dicount">
                         <div class="img_truck">
                             <i class="fas fa-truck truck"></i>
                         </div>
-                        <div class="precio_oferta">
+                        <div class="price-offer">
                             <p class="main-price">$6.770</p>
                             <p class="main-discount">40% off</p>
                         </div>
@@ -115,14 +115,14 @@
                     </div>
                 </article>
                 <article class="main-product">
-                    <div class="imagen-producto">
+                    <div class="product-image">
                         <img src="/images/img-macbook-pro-2019.jpg" alt="imagen macbook-pro"/>
                     </div>
                     <div class="box-price-dicount">
                         <div class="img_truck">
                             <i class="fas fa-truck truck"></i>
                         </div>
-                        <div class="precio_oferta">
+                        <div class="price-offer">
                             <p class="main-price">$230.000</p>
                             <p class="main-discount">20% off</p>
                         </div>
@@ -135,14 +135,14 @@
             <!-- Grupo de 2 productos -->
             <div class="article-tablet">
                 <article class="main-product">
-                    <div class="imagen-producto">
+                    <div class="product-image">
                         <img src="/images/img-samsung-galaxy-s10.jpg" alt="imagen Samsung Galaxy"/>
                     </div>
                     <div class="box-price-dicount">
                         <div class="img_truck">
                             <i class="fas fa-truck truck"></i>
                         </div>
-                        <div class="precio_oferta">
+                        <div class="price-offer">
                             <p class="main-price">$70.500</p>
                             <p class="main-discount">10% off</p>
                         </div>
@@ -150,14 +150,14 @@
                     </div>
                 </article>
                 <article class="main-product">
-                    <div class="imagen-producto">
+                    <div class="product-image">
                         <img src="/images/img-tv-samsung-smart.jpg" alt="imagen Samsung Smart"/>
                     </div>
                     <div class="box-price-dicount">
                         <div class="img_truck">
                             <i class="fas fa-truck truck"></i>
                         </div>
-                        <div class="precio_oferta">
+                        <div class="price-offer">
                             <p class="main-price">$23.200</p>
                             <p class="main-discount">5% off</p>
                         </div>
@@ -176,14 +176,14 @@
             <!-- Grupo de 2 productos -->
             <div class="article-tablet">
                 <article class="main-product">
-                    <div class="imagen-producto">
+                    <div class="product-image">
                         <img src="/images/img-cafetera-moulinex.jpg" alt="imagen catetera mulinex"/>
                     </div>
                     <div class="box-price-dicount">
                         <div class="img_truck">
                             <i class="fas fa-truck truck"></i>
                         </div>
-                        <div class="precio_oferta">
+                        <div class="price-offer">
                             <p class="main-price">$6.770</p>
                             <p class="main-discount">40% off</p>
                         </div>
@@ -191,14 +191,14 @@
                     </div>
                 </article>
                 <article class="main-product">
-                    <div class="imagen-producto">
+                    <div class="product-image">
                         <img src="/images/img-macbook-pro-2019.jpg" alt="imagen macbook-pro"/>
                     </div>
                     <div class="box-price-dicount">
                         <div class="img_truck">
                             <i class="fas fa-truck truck"></i>
                         </div>
-                        <div class="precio_oferta">
+                        <div class="price-offer">
                             <p class="main-price">$230.000</p>
                             <p class="main-discount">20% off</p>
                         </div>
@@ -211,14 +211,14 @@
             <!-- Grupo de 2 productos -->
             <div class="article-tablet">
                 <article class="main-product">
-                    <div class="imagen-producto">
+                    <div class="product-image">
                         <img src="/images/img-samsung-galaxy-s10.jpg" alt="imagen Samsung Galaxy"/>
                     </div>
                     <div class="box-price-dicount">
                         <div class="img_truck">
                             <i class="fas fa-truck truck"></i>
                         </div>
-                        <div class="precio_oferta">
+                        <div class="price-offer">
                             <p class="main-price">$70.500</p>
                             <p class="main-discount">10% off</p>
                         </div>
@@ -226,14 +226,14 @@
                     </div>
                 </article>
                 <article class="main-product">
-                    <div class="imagen-producto">
+                    <div class="product-image">
                         <img src="/images/img-tv-samsung-smart.jpg" alt="imagen Samsung Galaxy"/>
                     </div>
                     <div class="box-price-dicount">
                         <div class="img_truck">
                             <i class="fas fa-truck truck"></i>
                         </div>
-                        <div class="precio_oferta">
+                        <div class="price-offer">
                             <p class="main-price">$23.200</p>
                             <p class="main-discount">5% off</p>
                         </div>
