--- a/public/css/login.css
+++ b/public/css/login.css
@@ -6,6 +6,7 @@ main {
     background-color: #fff;
     color: #525252;
     margin-bottom: 40px;
+    box-shadow: 0px 0px 10px rgb(100, 100, 100);
 }
 
 main label {
